// $Id: CHANGELOG.txt,v 1.13.2.39 2010/09/02 15:27:08 mkalkbrenner Exp $

Apache Solr Multilingual 6.x-1.0-beta3, 2010-09-10
--------------------------------------------------
[#863154] mkalkbrenner: SpellCheckComponent error
[#866546] mkalkbrenner: Warning: Call-time pass-by-reference
[       ] mkalkbrenner: changed some code according to drupal coding standards
[#887064] mkalkbrenner: How to configure Tomcat to work with Accents and Umlauts
[       ] mkalkbrenner: merged schema.xml drupal-1.1
[       ] mkalkbrenner: set preserveOriginal to 1 by default like apachesolr 6.x-1.2 does
[       ] mkalkbrenner: Apply advanced settings to config files created by "Unique (Non-English) Language Configuration Download" as well
[       ] mkalkbrenner: display advanced solr settings for all active languages
[       ] mkalkbrenner: moved advanced solr configuration settings to dedicated module
[       ] mkalkbrenner: made data dir configurable
[#876494] mkalkbrenner: Chaotic taxonomy search fields, hard to make sense of them
[#899636] linksunten, mkalkbrenner: corrupt validation in admin files


Apache Solr Multilingual 6.x-1.0-beta2, 2010-07-19
--------------------------------------------------
[       ] mkalkbrenner: changing "language" neutral" mapping requires re-index but not a new solr config.
[       ] mkalkbrenner: fixed wrong usage of t().
[       ] mkalkbrenner: added alternative language facet block


Apache Solr Multilingual 6.x-1.0-beta1, 2010-07-05
--------------------------------------------------
[       ] mkalkbrenner: If "language" neutral" is mapped to another language the document gets indexed using this language. "Language neutral" will not occure as an filter in the language facet anymore.
[       ] mkalkbrenner: Skip dataDir in solrconfig.xml for Multi Core Setup
[       ] mkalkbrenner: Allow user to adjust Auto Commit Max Time
[#394728] mkalkbrenner: By default filter by the user's language and provide setting on settings page.