@@ -1,5 +1,4 @@
 <?php
-// $Id: apachesolr_multilingual_advanced_solr.module,v 1.1.2.2 2010/08/26 14:08:23 mkalkbrenner Exp $
 
 /**
  * @file
