@@ -1,5 +1,4 @@
 <?php
-// $Id: apachesolr_multilingual_textfile.install,v 1.2.2.1 2010/08/18 20:16:43 mkalkbrenner Exp $
 
 /**
  * @file
