@@ -1,4 +1,3 @@
-    <!-- $Id: fieldType_textSpell_LANGUAGE.xml,v 1.3.2.2 2010/06/18 16:10:17 mkalkbrenner Exp $ -->
     
     <fieldType name="textSpell[LANGUAGE_ID]" class="solr.TextField" positionIncrementGap="100">
       <analyzer>
