@@ -1,4 +1,3 @@
-    <!-- $Id: fieldType_textSpell_multilingual.xml,v 1.1.2.3 2010/06/18 16:10:17 mkalkbrenner Exp $ -->
     
     <fieldType name="textSpell_multilingual" class="solr.TextField" positionIncrementGap="100">
       <analyzer>
