@@ -1,4 +1,3 @@
-    <!-- $Id: lst_spellchecker_LANGUAGE.xml,v 1.1.2.1 2010/04/01 11:30:15 mkalkbrenner Exp $ -->
     <lst name="spellchecker">
       <str name="name">spellchecker[LANGUAGE_ID]</str>
       <str name="field">spell[LANGUAGE_ID]</str>
