@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!-- $Id: schema.xml,v 1.4.2.6 2010/08/26 10:42:02 mkalkbrenner Exp $ -->
 
 <!--
  This is the Solr schema file. This file should be named "schema.xml" and
